aws_vpc.tf
resource "aws_vpc" "a" {
  cidr_block = "10.0.0.0/16"
  tags = {
    network = "a"
  }
}
